--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ node_js:
   - "0.10"
   - "0.8"
 before_script:
-  - export PATH=$PATH:node_modules/.bin/
+  - sudo add-apt-repository -y ppa:hvr/ghc
+  - sudo apt-get update
+  - sudo apt-get -y install cabal-install-1.18 ghc-7.8.2 happy
+  - export PATH=/opt/ghc/7.8.2/bin:/opt/cabal/1.18/bin:node_modules/.bin/:$PATH
+  - sudo cabal update
+  - sudo cabal install purescript
   - bower update
 script:
   - grunt
