--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_script:
   - sudo apt-get update
   - sudo apt-get -y install cabal-install-1.18 ghc-7.8.2 happy
   - export PATH=/opt/ghc/7.8.2/bin:/opt/cabal/1.18/bin:node_modules/.bin/:$PATH
-  - sudo cabal update
-  - sudo cabal install purescript
+  - sudo /opt/cabal/1.18/bin/cabal update
+  - sudo /opt/cabal/1.18/bin/cabal install purescript
   - bower update
 script:
   - grunt
