--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_script:
   - sudo add-apt-repository -y ppa:hvr/ghc
   - sudo apt-get update
   - sudo apt-get -y install cabal-install-1.18 ghc-7.8.2 happy
-  - export PATH=/opt/ghc/7.8.2/bin:/opt/cabal/1.18/bin:node_modules/.bin/:$PATH
-  - sudo /opt/cabal/1.18/bin/cabal update
-  - sudo /opt/cabal/1.18/bin/cabal install purescript
+  - export PATH=/opt/ghc/7.8.2/bin:/opt/cabal/1.18/bin:node_modules/.bin/:$PATH:$HOME/.cabal/bin
+  - cabal update
+  - cabal install purescript
   - bower update
 script:
   - grunt
