--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-purescript": "~0.5.0",
+    "grunt-contrib-uglify": "*",
     "browserify": "*",
     "grunt-browserify": "*"
   },
