commit momentjs stuff, a lot of this is just for fun anand can get split out one day
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
         "tests"
     ],
     "dependencies": {
-
+        "purescript-datetime": "*",
+        "purescript-control": "*"
     }
 }
