--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     ],
     "dependencies": {
         "purescript-datetime": "*",
-        "purescript-control": "*"
+        "purescript-control": "*",
+        "purescript-either": "*",
+        "purescript-foreign": "*"
     }
 }
