--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "author": "Ricky Elrod",
   "license": "MIT",
+  "repository": "git://github.com/noexc/mapview-psc.git",
   "dependencies": {
+    "bower": "~1.3.12",
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-purescript": "~0.5.0",
     "grunt-contrib-uglify": "*",
+    "grunt-purescript": "~0.5.0",
     "browserify": "*",
     "grunt-browserify": "*"
   },
