Add lookangle module
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "purescript-either": "*",
     "purescript-foldable-traversable": "*",
     "purescript-foreign": "*",
+    "purescript-math": "*",
     "purescript-simple-dom": "aktowns/purescript-simple-dom"
   },
   "resolutions": {
