Pull out purescript-googlemaps into a separate lib
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "purescript-either": "*",
     "purescript-foldable-traversable": "*",
     "purescript-foreign": "*",
+    "purescript-googlemaps": "relrod/purescript-googlemaps",
     "purescript-math": "*",
     "purescript-simple-dom": "relrod/purescript-simple-dom"
   },
