--- a/bower.json
+++ b/bower.json
@@ -17,14 +17,13 @@
   "dependencies": {
     "purescript-datetime": "*",
     "purescript-control": "*",
+    "purescript-dom": "*",
     "purescript-either": "*",
     "purescript-foldable-traversable": "*",
     "purescript-foreign": "*",
     "purescript-googlemaps": "relrod/purescript-googlemaps",
+    "purescript-leaflet": "dysinger/purescript-leaflet#master",
     "purescript-math": "*",
     "purescript-simple-dom": "aktowns/purescript-simple-dom"
-  },
-  "resolutions": {
-    "purescript-arrays": "~0.3.0"
   }
 }
